--- a/src/app/ohbeer/client/stylesheets/main.scss
+++ b/src/app/ohbeer/client/stylesheets/main.scss
@@ -1,6 +1,5 @@
 @import "{poetic:materialize-scss}/sass/components/_color.scss";
 
-$primary-color: color("deep-orange", "base") !default;
-$secondary-color: color("deep-orange", "lighten-1");
+$primary-color: color("amber", "darken-2");
 
 @import "{poetic:materialize-scss}/sass/materialize.scss";
