--- a/src/app/ohbeer/client/templates/login.html
+++ b/src/app/ohbeer/client/templates/login.html
@@ -7,7 +7,7 @@
       <input class="password-input" type="password">
     </div>
     <div>
-      <button type="submit">Login</button>
+      <button class="waves-effect waves-light btn" type="submit">Login</button>
     </div>
   </form>
 
