--- a/src/app/ohbeer/client/templates/main.html
+++ b/src/app/ohbeer/client/templates/main.html
@@ -1,7 +1,16 @@
 <template name="mainLayout">
-  <header>
-    <h1>Oh, Beer!</h1>
-  </header>  
+
+
+  <nav>
+    <div class="nav-wrapper">
+      <a href="/home" class="brand-logo">Oh, Beer!</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">Payment</a></li>
+      </ul>
+    </div>
+  </nav>
 
   <body>
     <main>
@@ -10,33 +19,3 @@
     <footer>test</footer>
   </body>
 </template>
-
-
-
-
-<!--<head>
-  <title>simple</title>
-  <link rel="stylesheet" type="text/css" href="../stylesheets/main.css">
-</head>
-
-<body>
-  <h1 class="card-panel teal">Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
-</body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com">Discussions</a></li>
-  </ul>
-</template>-->
