Added email/password validation toasts and styled

--- a/src/app/ohbeer/client/templates/login.html
+++ b/src/app/ohbeer/client/templates/login.html
@@ -1,12 +1,12 @@
 <template name="loginMobile">
-  <form>
+  <form class="login-form">
     <div>
-      <input class="email-address-input" type="text">  
+      <input placeholder="Email" class="email-address-input " type="text">  
     </div>
     <div>
-      <input class="password-input" type="password">
+      <input placeholder="Password" class="password-input" type="password">
     </div>
-    <div>
+    <div> 
       <button class="waves-effect waves-light btn" type="submit">Login</button>
     </div>
   </form>
