--- a/src/app/ohbeer/client/templates/register.html
+++ b/src/app/ohbeer/client/templates/register.html
@@ -1,13 +1,13 @@
 <template name="registerMobile">
 	<form class="sign-up-form">
 		<div>
-			<input class="email-address-input" type="text">
+			<input placeholder="Enter your email" class="email-address-input" type="text">
 		</div>
 		<div>
-			<input class="password-input" type="password">
+			<input placeholder="8+ character password" class="password-input" type="password">
 		</div>
 		<div>
-			<button type="submit">Register</button>
+			<button class="waves-effect waves-light btn" type="submit">Register</button>
 		</div>
 	</form>
 </template>
