--- a/src/app/ohbeer/client/templates/main.html
+++ b/src/app/ohbeer/client/templates/main.html
@@ -4,13 +4,13 @@
   <a href="#" class="brand-logo center">Oh, Beer!</a>
     <ul class="right hide-on-med-and-down">
       <li><a href="/home">Home</a></li>
-      <li><a href="">Order</a></li>
-      <li><a href="">Feedback</a></li>
+      <li><a href="/order">Order</a></li>
+      <li><a href="/profile">My Profile</a></li>
     </ul>
     <ul id="slide-out" class="side-nav">
       <li><a href="/home">Home</a></li>
-      <li><a href="">Order</a></li>
-      <li><a href="">Feedback</a></li>
+      <li><a href="/order">Order</a></li>
+      <li><a href="/profile">My Profile</a></li>
     </ul>
     <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 </nav>
