--- a/src/app/ohbeer/client/templates/home.html
+++ b/src/app/ohbeer/client/templates/home.html
@@ -1,3 +1,21 @@
 <template name="homeMobile">
-	<p>This is the home page!</p>
+	<h2>Location</h2>
+	<hr>
+
+	<div class="card-panel">
+		<form class="location-form">
+    		<div>
+      			<input placeholder="City" class="city-input " type="text">  
+    		</div>
+    		<div>
+      			<input placeholder="State (i.e. AZ, AK, CA)" class="state-input" type="text">
+    		</div>
+    		<div>
+    			<input placeholder="Zipcode" class="zipcode-input" type="text">
+			</div>
+			<div> 
+      			<button class="waves-effect waves-light btn" type="submit">Submit</button>
+    		</div>
+  		</form>
+	</div>
 </template>
