Changed layout added collections

--- a/src/app/mobile/templates/public/reset-password.html
+++ b/src/app/mobile/templates/public/reset-password.html
@@ -1,4 +1,4 @@
-<template name="resetPassword">
+<template name="resetPasswordMobile">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-4">
       <h4 class="page-header">Reset Password</h4>
