--- a/src/app/mobile/templates/public/splash.html
+++ b/src/app/mobile/templates/public/splash.html
@@ -1,55 +1,15 @@
-<template name="splash">
+<template name="splashMobile">
 	<div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text awesome">Welcome to Oh, Beer!</h1>
+      <h1 class="header center orange-text awesome">Oh, Beer!</h1>
       <div class="row center">
-        <h5 class="header col s12 light">Bringing bartending into the 21st century</h5>
+        <h5 class="header col s12 light">Ordering drinks made easy.</h5>
       </div>
       <div class="row center">
-        <a href="{{pathFor 'signup'}}" id="download-button" class="btn-large waves-effect waves-light">Get Started</a>
+        <a href="{{pathFor 'signupMobile'}}" id="download-button" class="btn-large waves-effect waves-light">Sign Up</a>
+				<a href="{{pathFor 'loginMobile'}}" id="download-button" class="btn-large waves-effect waves-light">Login</a>
       </div>
-      <br><br>
-
-    </div>
-  </div>
-
-
-  <div class="container">
-    <div class="section">
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Streamlines Ordering</h5>
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Focused On You</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy To Configure</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <br><br>
-
-    <div class="section">
-
     </div>
   </div>
 </template>
