--- a/src/app/mobile/templates/public/recover-password.html
+++ b/src/app/mobile/templates/public/recover-password.html
@@ -1,4 +1,4 @@
-<template name="recoverPassword">
+<template name="recoverPasswordMobile">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-4">
       <h4 class="page-header">Recover Password</h4>
