--- a/src/app/mobile/templates/public/signup.html
+++ b/src/app/mobile/templates/public/signup.html
@@ -1,4 +1,4 @@
-<template name="signup">
+<template name="signupMobile">
   <div class="row">
     <div class="col s6 offset-s3">
       <h4 class="page-header">Sign Up</h4>
@@ -12,10 +12,11 @@
           <input type="password" name="password" class="form-control" placeholder="Password">
         </div>
         <div class="form-group">
-          <input type="submit" class="btn btn-success" value="Sign Up">
+          <p>Step 1 of 3</p>
+          <input type="submit" class="btn btn-success" value="Next Step">
         </div>
       </form>
-      <p>Already have an account? <a href="{{pathFor 'login'}}">Log In</a>.</p>
+      <p>Already have an account? <a href="{{pathFor 'loginMobile'}}">Log In</a>.</p>
     </div>
   </div>
 </template>
