Corrected the boilerplate routing
Fixed issue on running on android

--- a/src/app/mobile/templates/globals/header.html
+++ b/src/app/mobile/templates/globals/header.html
@@ -2,7 +2,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper container">
-                <a class="brand-logo" href="{{brandLink}}">Oh, Beer!</a>
+                <a class="brand-logo" href="{{brandLink}}">Oh, BeerMe!</a>
                 {{#if currentUser}}
                 	{{> authenticatedNavigation}}
                 {{else}}
