Readded the mobile folder with working User Profile redirection

--- a/src/app/mobile/mobile/templates/layouts/default.html
+++ b/src/app/mobile/mobile/templates/layouts/default.html
@@ -7,10 +7,18 @@
 			{{> loading}}
 		{{else}}
 			{{#if authenticated}}
-				{{userProfilez}}
-				{{userPaymentz}}
 				{{#unless redirectAuthenticated}}
-					{{> Template.dynamic template=yield}}
+				{{#if Template.subscriptionsReady}}
+					{{#if userProfilez}}
+						{{> userProfile}}
+					{{else}}
+						{{#if userPaymentz}}
+							{{> paymentMobile}}
+						{{else}}
+							{{> Template.dynamic template=yield}}
+						{{/if}}
+					{{/if}}
+				{{/if}}
 				{{/unless}}
 			{{else}}
 				{{#unless redirectPublic}}
