Added the geolocation package and finished user creation

--- a/src/app/mobile/templates/authenticated/user.html
+++ b/src/app/mobile/templates/authenticated/user.html
@@ -1,4 +1,4 @@
-<template name="userProfile">
+<template name="userMobile">
   <div class="row">
     <h4 class="page-header center">Profile Picture</h4>
     <hr>
