--- a/src/app/mobile/templates/layouts/default.html
+++ b/src/app/mobile/templates/layouts/default.html
@@ -10,7 +10,7 @@
 				{{#unless redirectAuthenticated}}
 				{{#if Template.subscriptionsReady}}
 					{{#if userProfilez}}
-						{{> userProfile}}
+						{{> userMobile}}
 					{{else}}
 						{{#if userPaymentz}}
 							{{> paymentMobile}}
