--- a/src/app/mobile/templates/authenticated/index.html
+++ b/src/app/mobile/templates/authenticated/index.html
@@ -2,9 +2,13 @@
   <div class="jumbotron text-center" style="padding: 20px;">
     <h4>Hello, {{currentUser.emails.[0].address}}</h4>
     <p></p>
-    <button class="btn waves-effect waves-light saveImage" type="submit" name="action">Locate
+    <button class="btn waves-effect waves-light location" type="submit" name="action">Locate
       <i class="material-icons right">send</i>
     </button>
     <p style="font-size: 16px; color: #aaa;">Turn on your locatioin</p>
+    {{#if getLocation}}
+    {{getLocation.lat}}
+    {{getLocation.lng}}
+    {{/if}}
   </div>
 </template>
