Added mobile header navbar & pulling list of bars from db

--- a/src/app/mobile/templates/globals/authenticated-navigation.html
+++ b/src/app/mobile/templates/globals/authenticated-navigation.html
@@ -1,7 +1,8 @@
 <template name="authenticatedNavigationMobile">
   <ul id="slide-out" class="side-nav">
     <li class="{{currentRoute 'paymentMobile'}}"><a href="{{pathFor 'paymentMobile'}}">Change payment</a></li>
-    <li class="{{currentRoute 'dashboardMobile'}}"><a href="{{pathFor 'dashboardMobile'}}">Dashboard</a></li>
+    <li class="{{currentRoute 'barsMobile'}}"><a href="{{pathFor 'barsMobile'}}">All Bars</a></li>
+		<li class="logout"><a>Logout</a></li>
   </ul>
 	<a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 </template>
