--- a/src/app/mobile/templates/authenticated/index.html
+++ b/src/app/mobile/templates/authenticated/index.html
@@ -1,4 +1,5 @@
 <template name="indexMobile">
+  {{#if Template.subscriptionsReady}}
   <div class="jumbotron text-center" style="padding: 20px;">
     <h4>Hello, {{currentUser.emails.[0].address}}</h4>
     <p></p>
@@ -11,4 +12,7 @@
     {{getLocation.lng}}
     {{/if}}
   </div>
+  {{else}}
+    {{>loading}}
+  {{/if}}
 </template>
