Added dynamic urls for menu items

--- a/src/app/mobile/templates/authenticated/listBars.html
+++ b/src/app/mobile/templates/authenticated/listBars.html
@@ -7,7 +7,7 @@
         <p>{{location.address}}<br>
            {{phone}}
         </p>
-        <a href="{{pathFor 'menuMobile'}}" class="secondary-content"><i class="material-icons">navigate_next</i></a>
+        <a href="{{pathFor 'menuMobile'}}/{{_id}}" class="secondary-content"><i class="material-icons">navigate_next</i></a>
       </li>
       {{/each}}
     </ul>
