--- a/src/app/mobile/templates/authenticated/menu.html
+++ b/src/app/mobile/templates/authenticated/menu.html
@@ -1,5 +1,7 @@
 <Template name="menuMobile">
   <p>
-    This is the menu
+    {{#each menuItems}}
+      {{name}}
+    {{/each}}
   </p>
 </Template>
