--- a/src/app/mobile/templates/authenticated/menu.html
+++ b/src/app/mobile/templates/authenticated/menu.html
@@ -1,7 +1,24 @@
 <Template name="menuMobile">
-  <p>
-    {{#each menuItems}}
-      {{name}}
+
+  <ul class="collection with-header">
+    <li class="collection-header"><h4>{{barName.name}}</h4></li>
+  </ul>
+
+  <ul class="collection with-header">
+    {{#each categoryItems}}
+    <li class="collection-header"><h4>{{this}}</h4></li>
+    {{#each sortedItems this}}
+    <li class="collection-item"><div>{{name}} - {{prettyPrice price}}</div></li>
     {{/each}}
-  </p>
+    {{/each}}
+  </ul>
+
+  <ul class="collection with-header">
+
+    <li class="collection-header"><h4>Checkout</h4></li>
+
+    <li class="collection-item"><div></div></li>
+
+  </ul>
+
 </Template>
