--- a/src/app/mobile/stylesheets/main.scss
+++ b/src/app/mobile/stylesheets/main.scss
@@ -1,3 +1,23 @@
 .awesome{
   color: blue;
 }
+
+.valign-helper-logged-out
+{
+    min-height: calc(100vh - 95px);
+}
+
+i.add-drink, i.remove-drink{
+  font-size: 36px !important;
+}
+
+.drink-count{
+  font-size: 20px
+}
+
+.checkout-bottom{
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  height: 10vh;
+}
