--- a/src/app/mobile/templates/authenticated/menu.html
+++ b/src/app/mobile/templates/authenticated/menu.html
@@ -1,24 +1,52 @@
 <Template name="menuMobile">
 
   <ul class="collection with-header">
-    <li class="collection-header"><h4>{{barName.name}}</h4></li>
+    <li class="collection-header center-align">
+      <h4>{{barName.name}}</h4></li>
   </ul>
 
-  <ul class="collection with-header">
-    {{#each categoryItems}}
-    <li class="collection-header"><h4>{{this}}</h4></li>
+
+  {{#each categoryItems}}
+  <ul class="collection with-header z-depth-2">
+
+    <li class="collection-header">
+      <h5>{{this}}</h5>
+    </li>
     {{#each sortedItems this}}
-    <li class="collection-item"><div>{{name}} - {{prettyPrice price}}</div></li>
-    {{/each}}
+    <li class="collection-item avatar">
+      <div>
+        <span class="title">{{name}}</span>
+        {{#if inStock}}
+          <p>{{prettyPrice price}}</p>
+        {{else}}
+        <p>Out of Stock</p>
+        {{/if}}
+        <a class="secondary-content drink-count" id="{{_id}}">
+          <i class="material-icons remove-drink">remove</i>
+          {{currentQuantity _id}}
+          <i class="material-icons add-drink">add</i>
+        </a>
+      </div>
+    </li>
     {{/each}}
   </ul>
+  {{/each}}
 
-  <ul class="collection with-header">
+  <!-- <ul class="collection with-header">
 
-    <li class="collection-header"><h4>Checkout</h4></li>
+    <li class="collection-header">
+      <h4>Checkout</h4></li>
 
-    <li class="collection-item"><div></div></li>
+    <li class="collection-item">
+      <div></div>
+    </li>
 
-  </ul>
+  </ul> -->
 
 </Template>
+
+<template name="checkoutFooter">
+  <div class="checkout-bottom deep-purple lighten-5">
+    Hello
+  </div>
+</template>
