--- a/src/app/mobile/templates/authenticated/payment.html
+++ b/src/app/mobile/templates/authenticated/payment.html
@@ -1,10 +1,18 @@
 <template name="paymentMobile">
-  {{#autoForm id="paymentInfo" collection="Meteor.users" doc=currentUser type="update"}}
-    {{>afQuickField name="profile.card"}}
-    {{>afQuickField name="profile.cvc"}}
-    {{>afQuickField name="profile.expiration"}}
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-      <i class="material-icons right">send</i>
-    </button>
-  {{/autoForm}}
+  <div class="valign-wrapper valign-helper-logged-out">
+    <div class="container valign">
+      <div class="row">
+        <div class="col s12 white z-depth-1 inner-padding">
+          {{#autoForm id="paymentInfo" collection="Meteor.users" doc=currentUser type="update"}}
+            {{>afQuickField name="profile.card"}}
+            {{>afQuickField name="profile.cvc"}}
+            {{>afQuickField name="profile.expiration"}}
+            <button class="btn waves-effect waves-light right-align" type="submit" name="action">Submit
+              <i class="material-icons right">send</i>
+            </button>
+          {{/autoForm}}
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
