--- a/src/app/mobile/templates/public/login.html
+++ b/src/app/mobile/templates/public/login.html
@@ -1,21 +1,25 @@
 <template name="loginMobile">
-  <div class="row">
-    <div class="col s6 offset-s3">
-      <h4 class="page-header">Login</h4>
-      <form id="login" class="login">
-        <div class="form-group">
-          <label for="emailAddress">Email Address</label>
-          <input type="email" name="emailAddress" class="form-control" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-          <label for="password"><span class="pull-left">Password</span> <a class="pull-right" href="{{pathFor 'recover-password'}}">Forgot Password?</a></label>
-          <input type="password" name="password" class="form-control" placeholder="Password">
-        </div>
-        <div class="form-group">
-          <input type="submit" class="btn btn-success" value="Login">
-        </div>
-      </form>
-      <p>Don't have an account? <a href="{{pathFor 'signup'}}">Sign Up</a>.</p>
+  <div class="valign-wrapper valign-helper-logged-out">
+    <div class="container valign">
+    <div class="row">
+      <div class="col s12 white z-depth-1 inner-padding">
+        <h4 class="page-header">Login</h4>
+        <form id="login" class="login">
+          <div class="form-group">
+            <label for="emailAddress">Email Address</label>
+            <input type="email" name="emailAddress" class="form-control" placeholder="Email Address">
+          </div>
+          <div class="form-group">
+            <label for="password"><span class="pull-left">Password</span> <a class="pull-right" href="{{pathFor 'recover-password'}}">Forgot Password?</a></label>
+            <input type="password" name="password" class="form-control" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <input type="submit" class="btn btn-success right" value="Login">
+          </div>
+        </form>
+        <p>Don't have an account? <a href="{{pathFor 'signupMobile'}}">Sign Up</a>.</p>
+      </div>
+    </div>
     </div>
   </div>
 </template>
