--- a/src/app/mobile/templates/public/signup.html
+++ b/src/app/mobile/templates/public/signup.html
@@ -1,22 +1,26 @@
 <template name="signupMobile">
-  <div class="row">
-    <div class="col s6 offset-s3">
-      <h4 class="page-header">Sign Up</h4>
-      <form id="signup" class="signup">
-        <div class="form-group">
-          <label for="emailAddress">Email Address</label>
-          <input type="email" name="emailAddress" class="form-control" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" name="password" class="form-control" placeholder="Password">
-        </div>
-        <div class="form-group">
-          <p>Step 1 of 3</p>
-          <input type="submit" class="btn btn-success" value="Next Step">
-        </div>
-      </form>
-      <p>Already have an account? <a href="{{pathFor 'loginMobile'}}">Log In</a>.</p>
+  <div class="valign-wrapper valign-helper-logged-out">
+    <div class="container valign">
+    <div class="row">
+      <div class="col s12 white z-depth-1 inner-padding">
+        <h4 class="page-header">Sign Up</h4>
+        <form id="signup" class="signup">
+          <div class="form-group">
+            <label for="emailAddress">Email Address</label>
+            <input type="email" name="emailAddress" class="form-control" placeholder="Email Address">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" class="form-control" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <p>Step 1 of 3</p>
+            <input type="submit" class="btn btn-success" value="Next Step">
+          </div>
+        </form>
+        <p>Already have an account? <a href="{{pathFor 'loginMobile'}}">Log In</a>.</p>
+      </div>
+    </div>
     </div>
   </div>
 </template>
