Added order confirmation

--- a/src/app/mobile/templates/authenticated/listBars.html
+++ b/src/app/mobile/templates/authenticated/listBars.html
@@ -1,7 +1,5 @@
 <template name="barsMobile">
-  <h4 class="center-align">Search Bars</h4>
-  <br />
-  <br />
+  <h4 class="center-align">Nearby Bars</h4>
   <form>
     <div class="input-field">
       <input id="search" type="search" required>
