--- a/src/app/mobile/templates/globals/header.html
+++ b/src/app/mobile/templates/globals/header.html
@@ -2,7 +2,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper container">
-                <a class="brand-logo center" href="{{brandLink}}">Oh, Beer Mobile!</a>
+                <a class="brand-logo center" href="{{brandLink}}">Oh, Beer!</a>
                 {{#if currentUser}}
                 	{{> authenticatedNavigationMobile}}
                 {{else}}
