--- a/src/app/mobile/templates/globals/authenticated-navigation.html
+++ b/src/app/mobile/templates/globals/authenticated-navigation.html
@@ -4,5 +4,5 @@
     <li class="{{currentRoute 'barsMobile'}}"><a href="{{pathFor 'barsMobile'}}">All Bars</a></li>
 		<li class="logout"><a>Logout</a></li>
   </ul>
-	<a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+	<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 </template>
