--- a/src/app/mobile/templates/authenticated/payment.html
+++ b/src/app/mobile/templates/authenticated/payment.html
@@ -3,14 +3,22 @@
     <div class="container valign">
       <div class="row">
         <div class="col s12 white z-depth-1 inner-padding">
-          {{#autoForm id="paymentInfo" collection="Meteor.users" doc=currentUser type="update"}}
-            {{>afQuickField name="profile.card"}}
-            {{>afQuickField name="profile.cvc"}}
-            {{>afQuickField name="profile.expiration"}}
-            <button class="btn waves-effect waves-light right-align" type="submit" name="action">Submit
-              <i class="material-icons right">send</i>
-            </button>
-          {{/autoForm}}
+          <div class="row">
+            <h4 class="page-header center">Credit/Debit</h4>
+            <hr>
+            <br />
+            <div class="container">
+              {{#autoForm id="paymentInfo" collection="Meteor.users" doc=currentUser type="update"}}
+                {{>afQuickField name="profile.card"}}
+                {{>afQuickField name="profile.cvc"}}
+                {{>afQuickField name="profile.expiration"}}
+                <p>Step 3 of 3</p>
+                <button class="btn waves-effect waves-light right-align" type="submit" name="action">Submit
+                  <i class="material-icons right">send</i>
+                </button>
+              {{/autoForm}}
+            </div>
+          </div>
         </div>
       </div>
     </div>
