--- a/src/app/mobile/templates/authenticated/user.html
+++ b/src/app/mobile/templates/authenticated/user.html
@@ -10,19 +10,20 @@
             <br />
             <div class="center-align">
             </div>
-            <br />
             <div class="center-align">
               <div class="waves-effect waves-light btn newImage">New Image</div>
             </div>
             <br>
-            {{#autoForm id="paymentInfo" collection="Meteor.users" doc=currentUser type="update"}}
-              {{>afQuickField name="profile.firstName"}}
-              {{>afQuickField name="profile.lastName"}}
-              <button class="btn waves-effect waves-light right-align saveImage" type="submit" name="action">Submit
-                <i class="material-icons right">send</i>
-              </button>
-            {{/autoForm}}
-            <br><br>
+            <div class="container">
+              {{#autoForm id="paymentInfo" collection="Meteor.users" doc=currentUser type="update"}}
+                {{>afQuickField name="profile.firstName"}}
+                {{>afQuickField name="profile.lastName"}}
+                <p>Step 2 of 3</p>
+                <button class="btn waves-effect waves-light right-align saveImage" type="submit" name="action">Submit
+                  <i class="material-icons right">send</i>
+                </button>
+              {{/autoForm}}
+            </div>
           </div>
         </div>
       </div>
