--- a/src/app/mobile/stylesheets/main.scss
+++ b/src/app/mobile/stylesheets/main.scss
@@ -1,3 +1,17 @@
+.bodysplash {
+  position: absolute;
+  left: 0px;
+  top: 30px;
+  width: 100%;
+  height: 100%;
+  background-image: url('http://i.imgur.com/iIkCY1B.jpg');
+  background-size: cover;
+}
+
+.title1 {
+  margin-top: 10%;
+}
+
 .awesome{
   color: blue;
 }
