--- a/src/app/mobile/templates/public/splash.html
+++ b/src/app/mobile/templates/public/splash.html
@@ -1,9 +1,10 @@
 <template name="splashMobile">
-	<div id="index-banner" class="parallax-container">
+	<div id="index-banner" class="parallax-container bodysplash">
 	    <div class="section no-pad-bot">
-	      <div class="container">
+	      <div class="container title1">
 	        <br><br>
 	        <h1 class="header center white-text text-lighten-2">Oh, Beer!</h1>
+					<br><br><br><br>
 	        <div class="row center">
 	          <h5 class="header col s12 light white-text">Ordering drinks made easy.</h5>
 	        </div>
@@ -14,6 +15,5 @@
 	      </div>
 	      <br><br>
 	    </div>
-	    <div class="parallax"><img src="/b-b.png" alt="Unsplashed background img 1" style="max-width: 100%; transform: translate3d(-50%, 252px, 0px);"></div>
 	  </div>
 </template>
