--- a/src/app/mobile/templates/public/signup.html
+++ b/src/app/mobile/templates/public/signup.html
@@ -3,7 +3,8 @@
     <div class="container valign">
     <div class="row">
       <div class="col s12 white z-depth-1 inner-padding">
-        <h4 class="page-header">Sign Up</h4>
+        <h4 class="page-header center">Sign Up</h4>
+        <hr>
         <form id="signup" class="signup">
           <div class="form-group">
             <label for="emailAddress">Email Address</label>
